# speXtra

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  TODO.md  Untitled.ipynb  guides.rst  pyproject.toml  requirements.readthedocs.txt  requirements.txt  setup.cfg  setup.py  sync_databse.sh
.github/: release.yml
.github/workflows/: bump.yml  markdown_link_check.yml  minimumdependencies.yml  publish_pypi.yml  replaceholder.yml  tests.yaml  tests.yml  webtests.yml
database/: README.md  Untitled.ipynb  default_curves.yml  default_filters.yml  default_spectra.yml  index.yml  templates.yml  x
database/extinction_curves/: README  list.txt
database/extinction_curves/calzetti/: index.yml
database/extinction_curves/cardelli/: index.yml
database/extinction_curves/gordon/: index.yml
database/filter_systems/: get_SVO_filters.py
database/filter_systems/elt/metis/: index.yml
database/filter_systems/elt/micado/: index.yml
database/filter_systems/etc/: index.yml
database/filter_systems/metis/: index.yml
database/filter_systems/micado/: index.yml
database/libraries/agn/: AA_README_AGN  index.yml
database/libraries/assef/: index.yml
database/libraries/bosz/hr/: index.yml
database/libraries/bosz/lr/: index.yml
database/libraries/bosz/mr/: index.yml
database/libraries/brown/: contents.yml  index.yml
database/libraries/dobos/: index.yml
database/libraries/etc/kinney/: index.yml
database/libraries/etc/kurucz/: index.yml
database/libraries/etc/marcs/p/: index.yml
database/libraries/etc/marcs/s/: index.yml
database/libraries/etc/misc/: index.yml
database/libraries/etc/pickles/: index.yml
database/libraries/irtf/: contents.yml  index.yml
database/libraries/kc96/: contents.yml  index.yml
database/libraries/kurucz/: index.yml
database/libraries/madden/: index.yml
database/libraries/moehler/: index.yml
database/libraries/moehler/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
database/libraries/nebulae/: AA_README_GALACTIC  contents.yml  index.yml
database/libraries/pickles/: a0iv.fits  a0v.fits  a2i.fits  a3v.fits  a5iii.fits  a7iii.fits  a7v.fits  b0i.fits  b0v.fits  b12iii.fits  b1i.fits  b1v.fits  b2ii.fits  b3iii.fits  b57v.fits  b5i.fits  b5iii.fits  b8i.fits  b8v.fits  b9iii.fits  b9v.fits  contents.yml  f02iv.fits  f0i.fits  f0ii.fits  f0iii.fits  f0v.fits  f2ii.fits  f2iii.fits  f5i.fits  f5iii.fits  f5v.fits  f6v.fits  f8i.fits  f8iv.fits  g0i.fits  g0iii.fits  g0iv.fits  g0v.fits  g2v.fits  (+122 more)
database/libraries/ref/: index.yml
database/libraries/sdss/: README.txt  contents.yml  index.yml
database/libraries/shapley/: index.yml
database/libraries/sky/: index.yml
database/libraries/sne/: index.yml
database/svo_filters/HST/: WFC3_IR.F110W
database/svo_filters/SLOAN/: SDSS.g  SDSS.rprime_filter  SDSS.z
database/templates/kc96/: contents.yml
database/templates/pickles/: a0i.fits  a0iii.fits  a0iv.fits  a2v.fits  a3iii.fits  a3v.fits  a47iv.fits  a5v.fits  b0v.fits  b1i.fits  b2ii.fits  b2iv.fits  b3i.fits  b3iii.fits  b3v.fits  b5ii.fits  b6iv.fits  b8v.fits  b9iii.fits  contents.yml  f0i.fits  f0iii.fits  f0v.fits  f2ii.fits  f2v.fits  f5i.fits  f5iv.fits  f5v.fits  f6v.fits  f8iv.fits  f8v.fits  g0iv.fits  g0v.fits  g2i.fits  g2iv.fits  g2v.fits  g5i.fits  g5ii.fits  g5iii.fits  g5iv.fits  (+36 more)
docs/: Makefile  about.md  about.rst  conf.py  configuration.md  configuration.rst  database.md  database.rst  extinction_curves.md  extinction_curves.rst  filters.md  filters.rst  index.md  index.rst  install.md  install.rst  package.rst  reference.rst  requirements.txt  rtd-pip-requirements  spectral_libraries.md  spectral_libraries.rst  spextra.md  spextra.rst  starting.md  starting.rst
docs/notebooks/: Database.ipynb  attenuated_blackbody.fits  speXtra_demo.ipynb
docs/notebooks/.ipynb_checkpoints/: speXtra_demo-checkpoint.ipynb
spextra/: __init__.py  conf.py  configuration.py  containers.py  database.py  download.py  downloads.py  exceptions.py  get_svo_filter_names.py  libraries.py  newdatabase.py  old_database.py  spextra.py  utils.py  version.py
spextra/data/: conf.yml  config.yml  config_defaults.yml  facilities_list.txt  get_svo_filter_names.py  spextra_registry.txt
spextra/tests/: __init__.py  conftest.py  test_database.py  test_spextra.py
spextra/tests/htmlcov/: __init___py.html  _home_mverdugo_MyCodes_speXtra_spextra___init___py.html  _home_mverdugo_MyCodes_speXtra_spextra_database_py.html  _home_mverdugo_MyCodes_speXtra_spextra_spextra_py.html  index.html  status.json  test_database_py.html  test_spextra_py.html
spextra/tests/mocks/: index.yml
spyctra/: __init__.py  database.py  spyctra.py
spyctra/data/: default_filters.yml
spyctra/tests/: test_database.py  test_spyctra.py
src/data/: default_filters.yml
src/spyctra/: __init__.py  database.py  skeleton.py  spyctra.py
src/spyctra/tests/: test_database.py  test_spyctra.py
src/tests/: test_database.py  test_spyctra.py
tests/: conftest.py  test_database.py  test_skeleton.py
