[project]
name = "speXtra"
version = "0.42.0"
description = "Tool to manage and manipulate astronomical spectra."
license = {text = "MIT"}
authors = [
    {name = "Miguel Verdugo", email = "mverduol@gmail.com"}
]
maintainers = [
    { name = "Kieran Leschinski", email = "kieran.leschinski@unive.ac.at" },
    { name = "Hugo Buddelmeijer", email = "hugo@buddelmeijer.nl" },
    { name = "Fabian Haberhauer", email = "fabian.haberhauer@univie.ac.at" },
]
readme = "README.md"
keywords = [ "astronomy" ]
dynamic = [ "classifiers" ]
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy (>=1.26.4,<2.3.0) ; python_version >= '3.10' and python_version < '3.13'",
    "numpy (>=2.2.6,<3.0.0) ; python_version >= '3.13'",

    "scipy (>=1.15.3,<2.0.0)",
    "astropy (>=6.1.7,<8.0.0)",
    "synphot (>=1.5.0,<2.0.0)",

    "pyyaml (>=6.0.2,<7.0.0)",
    "pooch (>=1.8.2,<2.0.0)",
    "tqdm (>=4.66.3,<5.0.0)",
    "more-itertools (>=10.2.0,<11.0.0)",

    "astar-utils (>=0.4.0,<1.0)"
]

[project.urls]
Repository = "https://github.com/AstarVienna/speXtra"
Documentation = "https://spextra.readthedocs.io/en/stable/"
"Bug Tracker" = "https://github.com/AstarVienna/speXtra/issues"
Changelog = "https://github.com/AstarVienna/speXtra/blob/main/CHANGELOG.md"


[tool.poetry]
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
]

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
matplotlib = "^3.10.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.3.7"
sphinx-book-theme = "^1.1.3"
sphinxcontrib-apidoc = ">=0.6.0,<1.0"
sphinx-copybutton = ">=0.5.2,<1.0"
myst-nb = "^1.2.0"
numpydoc = "^1.6.0"
matplotlib = "^3.10.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "webtest: marks tests as requiring network (deselect with '-m \"not webtest\"')",
]
filterwarnings = [
    "error",
    # Should certainly be fixed:

    # https://github.com/AstarVienna/speXtra/issues/61
    "ignore:The 'name plus file extension' property*:PendingDeprecationWarning",

    # https://github.com/AstarVienna/speXtra/issues/62
    'default:"wave_unit" was deprecated in version 1.4 and will be removed in a future version.:astropy.utils.exceptions.AstropyDeprecationWarning',
    'default:"flux_unit" was deprecated in version 1.4 and will be removed in a future version.:astropy.utils.exceptions.AstropyDeprecationWarning',

    # Should probably be fixed:
    "default:unclosed file <_io.BufferedReader name=:ResourceWarning",

    # Internal deprecation warning; the function should be tested as long
    # as it is in the codebase.
    "default:The download_file function is deprecated and will be removed in v1.0. Please use retriever.fetch instead.:DeprecationWarning"
]

[tool.coverage.report]
omit = ["spextra/tests/*"]
